[metadata]
name = nfc.py
version = 0.1
description = Multitool for NFC cards and chips
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Z3R0-CDS/nfcmodule
author = Zero Codes
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
